# raytrace_on_cpu

./: CMakeLists.txt  README.md
cmake/: cmake_config.cmake  vcpkg_install.cmake
include/: camera.h  hitable.h  hitableList.h  ray.h  sphere.h  vec3.h
src/: camera.cpp  hitableList.cpp  main.cpp  ray.cpp  sphere.cpp  vec3.cpp
